// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc eMCOvo"
      disabled={true}
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX cdoETC"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc eMCOvo"
      disabled={true}
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX hTJQjR"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc eMCOvo"
      disabled={true}
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX kEDreD"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX fqimxU"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW cTcwZW"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX fsNNDr"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW cTcwZW"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX kTMGzZ"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW cTcwZW"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX cdoETC"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX hTJQjR"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX kEDreD"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX cdoETC"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX hTJQjR"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX kEDreD"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX cdoETC"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX hTJQjR"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX kEDreD"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
        dir="rtl"
      >
        medium
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX cdoETC"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dJVffm cEZROX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
        dir="rtl"
      >
        large
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX hTJQjR"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dJVffm cEZROX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX kEDreD"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fOFsmt grWraG"
        >
          xlarge
        </label>
        <div
          className="sc-dJVffm cEZROX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX cdoETC"
          placeholder="medium"
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX hTJQjR"
          placeholder="large"
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX daFySu"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX bjevRN"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <div
        className="sc-iLacSs gEKKve"
      >
        <input
          className="sc-oEczX dCNhVq"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs iRhLvk"
      >
        <input
          className="sc-oEczX kEDreD"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
        <div
          className="sc-dJVffm gKXmWA"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
